End of section 11

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings":{
+    "CloudName":"dhw0vsumg",
+    "ApiKey":"366558294623484",
+    "ApiSecret":"NrHvgN9XSNGl-piH3ksG-0hdHqM"
+  },
   "AllowedHosts": "*"
 }
