--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,6 @@ $RECYCLE.BIN/
 *.swp
 API/datingapp.db
 API/Properties/launchSettings.json
+API/appsettings.json
+API/appsettings.Development.json
+API/appsettings.Development.json
