--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/postcss": "^4.1.14",
     "daisyui": "^5.1.26",
     "postcss": "^8.5.6",
